fixing sponsor logos plus, hopefully getting rid of flickering

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -105,19 +105,6 @@ body.location{
 	}
 }
 
-body.home{
-	background: #000 url(../images/bg/sunrise.jpg) no-repeat center center fixed;
-	width: 100%;
-	height: 100%;
-	display: block;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	top: 0;
-	left: 0;
-}
-
 h1{
 	@include transparent(#000, 0.5);
 	font-family: 'BrandonGrotesque-Thin';
@@ -380,6 +367,9 @@ iframe.twitter-share-button{
 	width: 280px;
 	float: left;
 	padding: 20px 0 200px 30px;
+	a{
+		margin: 10px;
+	}
 }
 
 .button-home{
@@ -488,10 +478,11 @@ iframe.twitter-share-button{
 	}
 	a{
 		display: block;
-		
+		float: right;
 		img{
 			text-align: right;
 			float: right;
+			margin: 10px;
 		}
 	}
 }
